fdo#70741 fdo#66042 rhbz#968892: force render full grapheme with fallback font

Related: rhbz#968892 discard impossible languages for oriya script fallback
Related: rhbz#968892 discard impossible languages for glyph fallback
Resolves: fdo#66042 get the bounds of the current grapheme
(also includes Change-Id: I14f1bab09eb0be9c2c896a1dde45913b99aab6df)
(also includes Change-Id: I5b1808d74f0a1dd0d8b6ea22136e574c0a6e8e2a)
(also includes Change-Id: I5bb98c61d047e69d74666261b2c489d80f344502)

Change-Id: I46d8cacba2b8ca0f24e1c4ba836839387d74e1a4