vcl/generic/fontmanager/fontconfig.cxx
@@ -854,6 +854,49 @@ namespace
 #endif
     }
 
+    //returns true if the given code-point couldn't possibly be in rLangTag.
+    bool isImpossibleCodePointForLang(const LanguageTag &rLangTag, sal_uInt32 currentChar)
+    {
+        //a non-default script is set, lets believe it
+        if (rLangTag.hasScript())
+            return false;
+
+        int32_t script = u_getIntPropertyValue(currentChar, UCHAR_SCRIPT);
+        UScriptCode eScript = static_cast<UScriptCode>(script);
+        bool bIsImpossible = false;
+        OUString sLang = rLangTag.getLanguage();
+        switch (eScript)
+        {
+            //http://en.wiktionary.org/wiki/Category:Oriya_script_languages
+            case USCRIPT_ORIYA:
+                bIsImpossible =
+                    sLang != "or" &&
+                    sLang != "kxv";
+                break;
+            //http://en.wiktionary.org/wiki/Category:Telugu_script_languages
+            case USCRIPT_TELUGU:
+                bIsImpossible =
+                    sLang != "te" &&
+                    sLang != "gon" &&
+                    sLang != "kfc";
+                break;
+            //http://en.wiktionary.org/wiki/Category:Bengali_script_languages
+            case USCRIPT_BENGALI:
+                bIsImpossible =
+                    sLang != "bn" &&
+                    sLang != "as" &&
+                    sLang != "bpy" &&
+                    sLang != "ctg" &&
+                    sLang != "sa";
+                break;
+            default:
+                break;
+        }
+        SAL_WARN_IF(bIsImpossible, "vcl", "Throwing away user set language of "
+            << sLang << " for finding a font for glyph fallback and autodetecting instead");
+        return bIsImpossible;
+    }
+
     LanguageTag getExemplerLangTagForCodePoint(sal_uInt32 currentChar)
     {
         int32_t script = u_getIntPropertyValue(currentChar, UCHAR_SCRIPT);
@@ -961,6 +1004,10 @@ bool PrintFontManager::Substitute( FontSelectPattern &rPattern, OUString& rMissi
             // also handle unicode surrogates
             const sal_uInt32 nCode = rMissingCodes.iterateCodePoints( &nStrIndex );
             FcCharSetAddChar( unicodes, nCode );
+            //if the codepoint is impossible for this lang tag, then clear it
+            //and autodetect something useful
+            if (!aLangAttrib.isEmpty() && isImpossibleCodePointForLang(aLangTag, nCode))
+                aLangAttrib = OString();
             //#i105784#/rhbz#527719  improve selection of fallback font
             if (aLangAttrib.isEmpty())
             {
